--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <div>
         <ul id="navbar">
-            <li><a href="INDEX.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="products.html">Products</a></li>
             <li><a href="aboutus.html">About</a></li>
             <li><a href="contactus.html">Contact</a></li>
